# simple-c2pa

./: .gitignore  .gitlab-ci.android.yml  .gitlab-ci.apple.yml  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  Makefile.toml  Package.swift  README.md  uniffi.toml
android/: .gitlab-ci.yml
android/project/: .gitignore  build.gradle.kts  settings.gradle.kts
android/project/gradle/wrapper/: gradle-wrapper.properties
android/project/simple_c2pa/: build.gradle.kts
apple/: .gitlab-ci.yml
apple/src/: SimpleC2PA.swift
mobile/: Cargo.toml  build.rs
mobile/android/: ._target  .gitlab-ci.yml  build.sh
mobile/apple/: .gitlab-ci.yml  build.sh
mobile/src/: lib.rs  simple-c2pa-mobile.udl
src/: assertions.rs  certificates.rs  common.rs  content_credentials.rs  lib.rs
tests/: examples.rs  main.rs
