[package]
name = "simple-c2pa"
version = "0.0.14"
edition = "2021"

[dependencies]
c2pa = { version = "0.32.1", features = ["file_io", "add_thumbnails"], path = "/run/media/marcel/1ac60e61-e5e2-4157-9a7a-830801a3fb0b/projects/c2pa-rs/sdk" }
openssl = "0.10.48"
ring = "0.17.7"
serde = "1.0.195"
serde_json = "1.0.111"
tempfile = "3.9.0"
thiserror = "1.0.56"
tracing = "0.1.40"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "simple_c2pa"
