[package]
name = "simple-c2pa-mobile"
version = "0.6.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
simple-c2pa = { path = "../" }
uniffi = { version = "0.25.0" }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
uniffi_build = "0.25.0"
uniffi_bindgen = "0.25.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["staticlib", "cdylib"]
